修改project页面相关前后台

--- a/view/people.html
+++ b/view/people.html
@@ -87,7 +87,7 @@
             cursor: pointer;
         }
 
-        .people__item--img:after {
+        /*.people__item--img:after {
             content: '';
             display: block;
             position: absolute;
@@ -100,7 +100,7 @@
 
         .people__item--img:hover:after {
             opacity: 0;
-        }
+        }*/
 
         .people__info {
             background: rgba(255, 64, 138, 0.75);
@@ -135,8 +135,8 @@
         }
 
         .people__info--close {
-            width: 30px;
-            height: 30px;
+            width: 15px;
+            height: 15px;
             background: url("../static/img/close_big.png");
             background-size: 100%;
             position: absolute;
@@ -175,8 +175,8 @@
 
         .people__info--text.content {
             text-align: justify;
-            font-size: 16px;
-            line-height: 22px;
+            font-size: 12px;
+            line-height: 18px;
             margin-top: 20px;
             padding-bottom: 10px;
         }
