--- a/view/people.html
+++ b/view/people.html
@@ -110,7 +110,7 @@
             top: 0;
             bottom: 0;
             right: 0;
-            overflow-y: scroll;
+            overflow-y: auto;
             -webkit-transform: translateX(100%);
             -ms-transform: translateX(100%);
             -o-transform: translateX(100%);
