--- a/view/menu.html
+++ b/view/menu.html
@@ -83,7 +83,7 @@
         position: absolute;
         list-style: none;
         transform: translateX(-50%);
-        bottom: -30px;
+        bottom: -25px;
         left: 50%;
         padding: 0;
         display: none;
@@ -94,6 +94,8 @@
         padding: 0;
         text-align: center;
         margin: 0;
+
+        font-size: 12px;
     }
 
     .nav__child-menu .nav__menu--item a {
