--- a/view/project.html
+++ b/view/project.html
@@ -87,7 +87,7 @@
         .project__list .swiper-wrapper img,
         .project__list .swiper-wrapper video,
         .project__list .swiper-wrapper embed{
-            min-width: 100%;
+            /*min-width: 100%;*/
             height: 100%;
             vertical-align: middle;
             cursor: pointer;
@@ -165,12 +165,13 @@
         .perview .swiper-slide {
             width: 100%;
             text-align: center;
+            background: rgba(0,0,0,1);
         }
 
         .perview img,
         .perview video,
         .perview embed{
-            width: 100%;
+            /*width: 100%;*/
             height: 100%;
         }
 
