--- a/view/project.html
+++ b/view/project.html
@@ -9,6 +9,7 @@
     <%})%>
     <link rel="stylesheet" href="../static/css/swiper.min.css">
     <script src="../static/js/jquery-1.10.1.min.js"></script>
+    <script src="../static/js/classList.js"></script>
     <script src="../static/js/swiper.min.js"></script>
     <style>
         * {
