更改项目页面样式

--- a/view/project.html
+++ b/view/project.html
@@ -172,6 +172,7 @@
         .perview .swiper-container .swiper-slide {
             width: auto;
             text-align: center;
+            overflow: hidden;
         }
 
         .swiper-slide--warp{
