--- a/view/project.html
+++ b/view/project.html
@@ -177,6 +177,7 @@
 
         .swiper-slide--warp{
             width: auto;
+            max-width: 100%;
             height: 100%;
             position: relative;
             display: inline-block;
