--- a/view/people.html
+++ b/view/people.html
@@ -36,7 +36,7 @@
         .warp {
             width: 100%;
             height: 100%;
-            overflow: hidden;
+            overflow-y: auto;
             text-align: center;
             background: rgba(255, 255, 255, 0);
             position: absolute;
