静态文件改用nginx 服务器

--- a/view/project.html
+++ b/view/project.html
@@ -11,6 +11,8 @@
     <script src="../static/js/jquery-1.10.1.min.js"></script>
     <!--<script src="../static/js/classList.js"></script>-->
     <script src="../static/js/swiper.min.js"></script>
+
+    <script src="http://www.zhangxinxu.com/study/js/html5media.min.js"></script>
     <style>
         * {
             padding: 0;
