--- a/view/contact.html
+++ b/view/contact.html
@@ -18,7 +18,7 @@
             font: 12px/1.5 "Microsoft YaHei","PingFang SC","Helvetica Neue",Helvetica,Arial,sans-serif;
         }
         .bg {
-            position: absolute;
+            position: fixed;
             top: 0;
             bottom: 0;
             left: 0;
