--- a/view/people.html
+++ b/view/people.html
@@ -19,7 +19,7 @@
         }
 
         .bg {
-            position: absolute;
+            position: fixed;
             top: 0;
             bottom: 0;
             left: 0;
