--- a/view/people.html
+++ b/view/people.html
@@ -37,6 +37,7 @@
             width: 100%;
             height: 100%;
             overflow-y: auto;
+            -webkit-overflow-scrolling: touch;
             text-align: center;
             background: rgba(255, 255, 255, 0);
             position: absolute;
