--- a/view/people.html
+++ b/view/people.html
@@ -9,9 +9,13 @@
     <%})%>
     <script src="../static/js/jquery-1.10.1.min.js"></script>
     <style>
+        * {
+            padding: 0;
+            margin: 0;
+        }
+
         html, body {
-            background-size: 100%;
-            background-repeat: no-repeat;
+            width: 100%;
             height: 100%;
             padding: 0;
             margin: 0;
@@ -27,22 +31,17 @@
             background-image: url("../static/img/4.jpg");
             background-size: cover;
             background-repeat: no-repeat;
-            -ms-filter: blur(20px);
             filter: blur(20px);
-            filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius=20, MakeShadow=false);
             z-index: 1;
         }
 
         .warp {
             width: 100%;
             height: 100%;
-            overflow-y: auto;
-            -webkit-overflow-scrolling: touch;
             text-align: center;
             background: rgba(255, 255, 255, 0);
             position: absolute;
             z-index: 10;
-
         }
 
         .people__list {
